# Dirigent

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  How_to_add_cues_via_SQLite_to_Dirigent.md  How_to_jj.md  LICENSE  Makefile  OpenCode.md  Pi.md  README.md  WHATS_NEW.md  analyze_dead_code.md  build.rs  how_to_use_SonarQube.md  pr_37_fix_2.md  sonar-project.properties  what_we_implemented.md
.github/workflows/: build-macos.yml
assets/: Dirigent.entitlements  Dirigent.icns  Info.plist
claude_pty/: Cargo.toml
claude_pty/examples/: diag.rs  fixreadme.rs
claude_pty/src/: builder.rs  event.rs  lib.rs  session.rs
dirigent-mcp-server/: package-lock.json  package.json
dirigent-mcp-server/src/: index.ts
dirigent-mcp-server/tests/integration/: self-referential-running-cues.test.ts
dirigent-mcp-server/tests/unit/: db-tools.test.ts
docs/: How_to_Dirigent_MCP.md  How_to_OpenCode.md  claude-pty-recording.md  explanation.md  how-to.md  jj-demo-walkthrough.md  observability-setup.md  reference.md  tutorial.md
scripts/: bundle_macos.sh  claude-otel-local.zsh  quality_loop.py  quality_loop_generic.py  release_it_locally.sh  setup_jj_demo.sh  sonar.sh
src/: agents.rs  app.rs  claude.rs  codex.rs  db.rs  diff_view.rs  error.rs  fast_llm.rs  file_tree.rs  gemini.rs  git.rs  log_collector.rs  main.rs  opencode.rs  prompt_hints.rs  prompt_suggestions.rs  settings.rs  sources.rs  ssh.rs  syntax.rs  telemetry.rs  workflow.rs
src/acp/: client.rs  invoke.rs  mod.rs  types.rs
src/agents/: diagnostics.rs  execution.rs  mod.rs  presets.rs  run_state.rs  trigger.rs  types.rs
src/app/: agents_poll.rs  ansi.rs  background.rs  change_set_analysis.rs  claude_code_name.rs  claude_run.rs  code_viewer.rs  cue_pool.rs  dialog_diff_review.rs  dialog_repo.rs  dialog_running_log.rs  dialog_settings.rs  dialogs.rs  dino.rs  file_navigation.rs  folder_compare.rs  git_operations.rs  graph_helpers.rs  hunk_staging.rs  jujutsu.rs  lava_lamp.rs  markdown_parser.rs  markdown_viewer.rs  mermaid.rs  mod.rs  notifications.rs  panels.rs  rendering.rs  repo_management.rs  search.rs  sources_poll.rs  split_cue.rs  ssh_operations.rs  symbols.rs  tasks.rs  theme.rs  thunderdome.rs  types.rs  util.rs  vcs_dispatch.rs  (+2 more)
src/app/code_viewer/: breadcrumb.rs  cue_input.rs  goto_definition.rs  line_rendering.rs  mod.rs  quick_open.rs  tab_bar.rs  types.rs
src/app/cue_pool/: actions.rs  bulk_actions.rs  cue_card.rs  helpers.rs  history.rs  markdown_import.rs  mod.rs
src/app/dialog/: agent_log.rs  cleanup_bookmarks.rs  commit_dialog.rs  create_bookmark.rs  create_pr.rs  cue_agent_runs.rs  custom_theme.rs  delete_bookmark.rs  diff_review.rs  file_ops.rs  filter_pr.rs  git_init.rs  graph_view.rs  import_pr.rs  log_viewer.rs  merge_bookmark.rs  merge_conflicts.rs  mermaid_view.rs  mod.rs  move_to_branch.rs  move_to_branch_error.rs  play_variables.rs  pr_error.rs  pull_diverged.rs  pull_unmerged.rs  repo.rs  (+3 more)
src/claude/: cli.rs  diff_parser.rs  done_hook.rs  import_cues.rs  invoke.rs  mod.rs  prompt.rs  stream.rs  types.rs
src/db/: activity.rs  agent_runs.rs  converters.rs  cue_ops.rs  execution_ops.rs  migrations.rs  mod.rs  pattern_ops.rs  source_ops.rs  types.rs
src/git/: archive.rs  commit.rs  diff.rs  forgejo.rs  graph.rs  history.rs  merge.rs  mod.rs  pr.rs  staging.rs  status.rs  worktree.rs
src/jj/: commit.rs  diff.rs  history.rs  mod.rs  status.rs  worktree.rs
src/lsp/: client.rs  manager.rs  mod.rs  types.rs
src/settings/: app_settings.rs  commands.rs  home_guard.rs  io.rs  mod.rs  playbook.rs  providers.rs  recent.rs  semantic_colors.rs  theme.rs
src/sources/: custom.rs  external.rs  finding_text.rs  html.rs  mod.rs  pr_comments.rs  pr_feedback.rs  pr_findings.rs  types.rs
src/util/: json_extract.rs  mod.rs
(+24 files in other folders)
