[package]
name = "Dirigent"
version = "0.3.2"
edition = "2021"

[dependencies]
dirs = "6"
eframe = "0.33"
egui_extras = { version = "0.33", features = ["syntect"] }
rusqlite = { version = "0.38", features = ["bundled"] }
git2 = "0.20"
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
notify = "8.2.0"
rfd = "0.17"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
regex = "1"
which = "8.0.2"
pulldown-cmark = "0.12"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[dev-dependencies]
tempfile = "3"
