[package]
name = "Dirigent"
version = "0.3.6"
edition = "2021"

[dependencies]
dirs = "=6.0.0"
eframe = "=0.34.1"
egui_extras = { version = "=0.34.1", features = ["syntect"] }
# NOTE: syntect 5.3 pulls unmaintained transitive deps bincode 1.3.3 and
# yaml-rust 0.4.5 — verify via `cargo audit`. Feature trimming is ineffective
# because egui_extras forces "default-fancy". Upgrade syntect when it drops
# these deps. Track: https://github.com/trishume/syntect/issues
syntect = { version = "=5.3.0", default-features = false, features = ["default-fancy"] }
rusqlite = { version = "=0.39.0", features = ["bundled"] }
git2 = "=0.20.4"
anyhow = "=1.0.102"
thiserror = "=2.0.18"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
image = { version = "=0.25.10", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp", "ico"] }
notify = "=8.2.0"
rfd = "=0.17.2"
uuid = { version = "=1.23.0", features = ["v4"] }
chrono = "=0.4.44"
regex = "=1.12.3"
pulldown-cmark = "=0.13.3"
which = "=8.0.2"
shlex = "=1.3.0"
strip-ansi-escapes = "=0.2.1"
lsp-types = "=0.97.0"
url = "=2.5.8"
tempfile = "=3.27.0"
libc = "=0.2.183"
reqwest = { version = "=0.13.2", default-features = false, features = ["blocking", "json", "query", "rustls"] }
sentry = "=0.47.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "=0.2.7"

[[bin]]
name = "dirigent"
path = "src/main.rs"

[dev-dependencies]
tempfile = "=3.27.0"
